--- a/MotherShip/src/main/res/layout/activity_main_screen.xml
+++ b/MotherShip/src/main/res/layout/activity_main_screen.xml
@@ -4,100 +4,58 @@
     android:layout_height="fill_parent"
     android:layout_gravity="center_vertical"
     android:background="@drawable/mothershipbg"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
+
     tools:context=".MainScreen" >
 
-    <!--
-         The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc.
-    -->
-
-    <TextView
-        android:id="@+id/fullscreen_content"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_vertical"
-        android:gravity="center"
-        android:keepScreenOn="true"
-        android:textColor="#33b5e5"
-        android:textSize="50sp"
-        android:textStyle="bold" />
-
-    <!--
-         This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows.
-    -->
-
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_vertical"
-        android:fitsSystemWindows="true" >
-
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="?buttonBarStyle"
-            android:layout_width="fill_parent"
+    <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingBottom="50dp"
-            android:paddingLeft="50dp"
-            android:paddingTop="35dp"
-            android:showDividers="middle|none"
-            tools:ignore="UselessParent" >
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
-            <Button
+        <Button
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal"
-                android:paddingBottom="10dp"
                 android:text="@string/calendar"
                 android:width="280dp"
                 tools:ignore="HardcodedText" />
 
-            <Button
+        <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="@string/twitter_feed"
                 android:width="280dp" />
-            
-			<Button
-			    android:id="@+id/button3"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_gravity="center_vertical"
-			    android:layout_weight="1"
-			    android:text="@string/lakehurst_ledger"
-			    android:width="280dp" />
 
-            <Button
-			    android:id="@+id/button4"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_gravity="center_vertical"
-			    android:layout_weight="1"
-			    android:text="@string/contact_list"
-			    android:width="280dp" />
-			
-			<Button
-			    android:id="@+id/button5"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_gravity="center_vertical"
-			    android:layout_weight="1"
-			    android:text="@string/egencia"
-			    android:width="280dp" />
+        <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/lakehurst_ledger"
+                android:width="280dp" />
 
-			</LinearLayout>
+        <Button
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/contact_list"
+                android:width="280dp" />
 
-    </FrameLayout>
+        <Button
+                android:id="@+id/button5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/egencia"
+                android:width="280dp" />
+
+    </LinearLayout>
 
 </FrameLayout>
