--- a/MotherShip/src/main/res/layout/activity_main_screen.xml
+++ b/MotherShip/src/main/res/layout/activity_main_screen.xml
@@ -5,9 +5,8 @@
     android:layout_gravity="center_vertical"
     android:background="@drawable/mothershipbg"
     android:paddingTop="20dp"
-    android:paddingBottom="20dp"
-
-    tools:context=".MainScreen" >
+    android:fitsSystemWindows="true"
+    android:paddingBottom="20dp" >
 
     <LinearLayout
             android:layout_width="wrap_content"
